--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "ahooks": "^3.7.11",
     "antd": "^5.16.1",
+    "dayjs": "^1.11.10",
     "dexie": "^4.0.4",
     "dexie-react-hooks": "^1.1.7",
     "react": "^18.2.0",
@@ -20,6 +18,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "unstated-next": "^1.1.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -47,6 +46,11 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0"
+    "@craco/craco": "^7.1.0",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^9.0.8"
   }
 }
