--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -24,8 +25,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build && mv build docs",
-    "deploy": "rm -rf docs && yarn build"
+    "build": "craco craco",
+    "deploy": "./build.sh"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "craco-less": "^3.0.1"
   }
 }
